force-app/main/default/objects/Document__c/Document__c.object-meta.xml
<CustomObject>
    <label>Authorized Signatory</label>
    <nameField>
        <displayFormat>AS-{0000}</displayFormat>
        <label>Authorized Signatory</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Authorized Signatory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>