force-app/main/default/objects/Document__c/fields/Application_Booking__c.field-meta.xml
<CustomField>
    <fullName>Application_Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application / Booking</label>
    <referenceTo>PropStrength__Application_Booking__c</referenceTo>
    <relationshipLabel>Authorized Signatory</relationshipLabel>
    <relationshipName>Authorized_Signatory</relationshipName>
    <type>Lookup</type>
</CustomField>