force-app/main/default/objects/Document__c/fields/Authorized_Signatory_1_Email__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Signatory_1_Email__c</fullName>
    <label>Authorized Signatory 1 Email</label>
    <type>Email</type>
</CustomField>