force-app/main/default/objects/Document__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SPA</fullName>
            </value>
            <value>
                <fullName>DSPA</fullName>
            </value>
            <value>
                <fullName>MOU</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Booking Form</fullName>
            </value>
            <value>
                <fullName>Amendment Letter</fullName>
                <isActive>false</isActive>
                <label>Amendment Letter</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>