force-app/main/default/objects/Document__c/recordTypes/Company_Representative.recordType-meta.xml
<RecordType>
    <fullName>Company_Representative</fullName>
    <active>true</active>
    <label>Company Representative</label>
</RecordType>