force-app/main/default/objects/Document__c/recordTypes/Seller_Representative.recordType-meta.xml
<RecordType>
    <fullName>Seller_Representative</fullName>
    <active>true</active>
    <label>Seller Representative</label>
</RecordType>